@@ -1,3 +1,13 @@
+2002-01-03  Michael Meeks  <michael@ximian.com>
+
+	* components/image-viewer/io-png.c
+	(image_save): disable png stuff.
+
+2001-12-21  Michael Meeks  <michael@ximian.com>
+
+	* configure.in: bump requirements on bonobo to get
+	something that works well.
+
 2002-01-03  John Fleck <jfleck@inkstain.net>
 
 	* help/nautilus-quick-reference/C/index.html
